quando se passa o mouse nos botões apresenta uma silhueta

--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -13,11 +13,13 @@
         <div class="barra">
           <a href="https://m.tecmundo.com.br/">
            <div class="tec1" title="TecMundo"  >
-              <img class= "logo" src= "img/log.jpg">tec<span style="font-weight: bold;">mundo</span>
+              <img class= "logo" src= "img/log.jpg">
+              
+              tec<span style="font-weight: bold;">mundo</span>
             </div>
           </a>
            <button class="voltar">
-             <a href="https://m.tecmundo.com.br/">
+             <a class="button_back" href="https://m.tecmundo.com.br/">
                <img class= "seta" src="img/seta.jpg">
              </a>
            </button>
