modificação botão de comentário da barra autor

--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>Vírus alienígena e arma biológica: as teorias conspiratórias da Covid-19 - Tecmundo</title>
         <link rel="stylesheet" href="Style/layout.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         
     </head>
 
@@ -46,10 +47,10 @@
               <div class= perfil_autor_image>
                  <a href="https://www.tecmundo.com.br/autor/788-diego-denck-via-nexperts">
                   <img src="img/avatar-editor.svg">
-                 </a>   
+                   
               </div>
               <div class="perfil_autor_text"> 
-                <p class="text"style="font-weight: bold;"> Diego Denck </p>
+                <p class="text"style="font-weight: bold;"> Diego Denck </p>  </a>
                 <p class="text">via <a href="https://nexperts.co/" target="blank">nexperts</a> </p>
              </div>
            </div>
@@ -57,7 +58,7 @@
            <a href="#comments" >
              <button type="button" >
                <div class= comment_image>  
-                 <img src="img/comment_image.png">
+                 <i class="material-icons"  style="font-size:21px;">chat_bubble_outline</i>
                </div>
                <div class="comment_text">
                   0 Comentários
