--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -87,13 +87,16 @@
             </a>
           </div>
          <div class="share"> 
+           <button type="button">
              <div class= "share_image">  
-               <img src="img/share_image.png">
+              <i class="fa fa-share-alt" style="font-size:20px;"></i>
              </div>
              <div class="share_text">
                0 Compartilharam 
              </div>
-           </div>   
+            </button>  
+           </div>
+           
        
              <!--modificado-->
           </div>
