parte de institucional quase pronta, resta colocar o icon e ajustar o tamanho

--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -766,6 +766,49 @@
           </div>
         </div>
 
+        <nav class="inst_sites">
+          <div class="inst">
+            <input type="checkbox" id="ckeck1">
+            <label for="ckeck1">Institucional </label><!-- <i class="fa fa-angle-left" style="font-size:25px; color: black"></i>-->
+              <ul>
+                <li>
+                  <a href="https://nzn.io/index#about">
+                    Sobre
+                  </a>
+                </li>
+                <li>  
+                  <a href="https://nzn.io/contato">
+                    Contato
+                  </a>
+                </li>
+                <li>
+                  <a href="https://nzn.io/jobs">
+                    Jobs
+                  </a>
+                </li>
+                <li>
+                  <a href="https://nzn.io/termos-de-privacidade">
+                    Política de Privacidade
+                  </a>
+                </li>
+                <li>
+                  <a href="https://mailchi.mp/gruponzn/licenciamento-editorial">
+                    Licenciamneto de Conteúdo
+                  </a>
+                </li>
+                <li>
+                  <a href="https://m.tecmundo.com.br/stories">
+                    Stories
+                  </a>
+                </li>
+              </ul>
+          </div>
+          <div class="sites">
+
+          </div>
+
+        </nav>
+
       </div>
   </body>
 
