feito Nossos Sites, ajuste no nav e suas divs

--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -3,6 +3,7 @@
     <head>
         
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial scale">
         <title>
           Vírus alienígena e arma biológica: as teorias conspiratórias da Covid-19 - Tecmundo
         </title>
@@ -818,7 +819,10 @@
         <nav class="inst_sites">
           <div class="inst">
             <input type="checkbox" id="ckeck1">
-            <label for="ckeck1">Institucional </label><!-- <i class="fa fa-angle-left" style="font-size:25px; color: black"></i>-->
+            <label for="ckeck1">
+              <p>Institucional </p>
+              <i class="fa fa-angle-left" style="font-size:22px; color: black"></i>
+            </label>
               <ul>
                 <li>
                   <a href="https://nzn.io/index#about">
@@ -842,7 +846,7 @@
                 </li>
                 <li>
                   <a href="https://mailchi.mp/gruponzn/licenciamento-editorial">
-                    Licenciamneto de Conteúdo
+                    Licenciamento de Conteúdo
                   </a>
                 </li>
                 <li>
@@ -852,8 +856,61 @@
                 </li>
               </ul>
           </div>
-          <div class="sites">
 
+
+          <div class="inst">
+            <input type="checkbox" id="ckeck2">
+            <label for="ckeck2">
+              <p>Nossos Sites</p>
+              <i class="fa fa-angle-left" style="font-size:22px; color: black"></i>
+            </label>
+              <ul>
+                <li>
+                  <a href="https://www.tecmundo.com.br/">
+                    Tecmundo
+                  </a>
+                </li>
+                <li>  
+                  <a href="https://www.megacurioso.com.br/">
+                    Mega Curioso
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.minhaserie.com.br/">
+                    Minha Série
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.clickjogos.com.br/">
+                    Click Jogos
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.thebrief.com.br/">
+                    The Brief
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.voxel.com.br/">
+                    Voxel
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.baixaki.com.br/">
+                    Baixaki
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.facebook.com/fikadikaoficial/">
+                    Fika Dika
+                  </a>
+                </li>
+                <li>
+                  <a href="https://savecoins.app/">
+                    Save Coins
+                  </a>
+                </li>
+              </ul>
           </div>
 
         </nav>
