inserido item abaixo do instiucional: NZN

--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -53,8 +53,9 @@
              </a>
            </div>
            <div class="search">
-            <i class="material-icons" style="font-size:30px;color:#1087ff;">search</i>
-            
+            <a  href="pesquisar.html">
+              <i class="material-icons" style="font-size:30px;color:#1087ff;">search</i>
+            </a>
            </div>
         </div>
        
@@ -928,6 +929,15 @@
                 </li>
               </ul>
           </div>
+        </div>
+        <div class="nzn inst">
+         <a target="_blank" href="https://nzn.io/"> 
+           <img src="img/nzn.png" alt="NZN">
+         </a>
+         <P>&copy; COPYRIGHT 2020 - NO ZEBRA NETWOORK S.A<br>
+         TODOS OS DIREITOS RESERVADOS.</p>
+
+       </div>
 
         </nav>
 
