Feito algumas otimizações, excluindo linhas de códigos desnecessárias e ajustado um pouco mais na responsividade

--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -39,9 +39,9 @@
       </div>
 
       <div class="delimeter">
-        <div class="barra">
-          <a href="https://m.tecmundo.com.br/">
-           <div class="tec1" alt="TecMundo">
+        <div class="barra" >
+          <a href="https://m.tecmundo.com.br/" alt="TecMundo">
+           <div class="tec1" title="TecMundo" >
               <img class= "logo" src= "img/log.png">
               <img class= "logo_act" src= "img/log2.jpg"></img>
               
