retirado algumas redudâncias do código, ajustado a responsividade da index novamente e centralizado alguns botões

--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -49,13 +49,13 @@
             </div>
           </a>
            <div class="voltar">
-             <a class="button_back" href="https://m.tecmundo.com.br/">
+             <a class="button_back back" href="https://m.tecmundo.com.br/">
               <i class="fa fa-angle-left" style="font-size:30px; color:#1087ff"></i>
              </a>
            </div>
            <div class="search">
             <a  href="pesquisar.html">
-              <i class="material-icons" style="font-size:30px;color:#1087ff;">search</i>
+              <i class="material-icons lupa" style="font-size:30px;color:#1087ff;">search</i>
             </a>
            </div>
         </div>
@@ -273,7 +273,7 @@
               <li>há 27 dias</li>
             </ul>
             <div class="save">
-              <i class="fa fa-bookmark-o" style="font-size:14px;"></i>
+              <i class="fa fa-bookmark-o" style="size:15px;"></i>
             </div>
             <div class= "redirect">
             <a  href="https://m.tecmundo.com.br/mercado/151283-senado-aprova-estado-calamidade-publica-videoconferencia.htm">
