ajuste de responsabilidade da barra2'

--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -602,15 +602,16 @@
           </div>
           <div  class=" comentarios"><!--itens de comentário1-->
             <div  class=" comentarios-tecmundo quantidade-de-comentarios">
-              0 COMENTÁRIOS
+              <div class="alinhar omitir">0</div>
+              <div class="alinhar"> COMENTÁRIOS</div>
             </div>
-            <div class="comentarios-tecmundo">
+            <div class="comentarios-tecmundo omitir">
               <a href="https://disqus.com/home/forums/tecmundo/" target="_blank">TecMundo</a>
              
             </div>
             <div class="comentarios-tecmundo ">
              <a href="https://help.disqus.com/en/articles/1717103-disqus-privacy-policy" target="_blank" title="Disqus's Privacy Policy">
-               <i class="fa fa-lock"> </i>  Política de privacidade 
+               <div class="alinhar"><i class="fa fa-lock"> </i></div> <div class=" alinhar omitir">Política de privacidade </div>  
              </a>
            </div>
            <div class="comentarios-tecmundo iniciar-sessao">
@@ -634,10 +635,10 @@
                 Recomendar
               </div>
             </div>
-            <div class=" item remover-efeito twitter ">
+            <div class=" item remover-efeito twitter omitir">
               <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fdisq.us%2Ft%2F3n2wnga&text=V%C3%ADrus%20alien%C3%ADgena%20e%20arma%20biol%C3%B3gica%3A%20as%20teorias%20conspirat%C3%B3rias%20da%20Covid-19" 
               target="_blank">
-                <button>
+                <button >
                   <div class="item item-text">
                     <i class="fa fa-twitter" style="font-size:15px"></i>
                   </div>
@@ -648,7 +649,7 @@
                 </button>
               </a>
             </div>
-            <div class=" item remover-efeito facebook">
+            <div class=" item remover-efeito facebook omitir">
               <a href="https://web.facebook.com/login.php?skip_api_login=1&api_key=966242223397117&signed_next=1&next=https%3A%2F%2Fweb.facebook.com%2Fsharer.php%3Fu%3Dhttp%253A%252F%252Fdisq.us%252Ft%252F3n2wnga&cancel_url=https%3A%2F%2Fweb.facebook.com%2Fdialog%2Fclose_window%2F%3Fapp_id%3D966242223397117%26connect%3D0%23_%3D_&display=popup&locale=pt_BR"
               target="_blank">
                 <button>
@@ -843,7 +844,7 @@
           <input type="checkbox" id="ckeck1">
           <label for="ckeck1">
             <p>Institucional </p>
-            <i class="fa fa-angle-left" style="font-size:22px; color: black"></i>
+            <i class="fa fa-angle-left" style="font-size:22px;"></i>
           </label>
             <ul>
               <li>
@@ -884,7 +885,7 @@
           <input type="checkbox" id="ckeck2">
           <label for="ckeck2">
             <p>Nossos Sites</p>
-            <i class="fa fa-angle-left" style="font-size:22px; color: black"></i>
+            <i class="fa fa-angle-left" style="font-size:22px;"></i>
           </label>
             <ul>
               <li>
@@ -936,7 +937,9 @@
         </div>
         <div class="nzn inst">
           <a target="_blank" href="https://nzn.io/"> 
-            <img src="img/nzn.png" alt="NZN">
+            
+            <img src="img/nzn.png" alt="NZN" class="sobrepor" >
+            <img src="img/black_nzn.png" alt="NZN">
           </a>
           <P>&copy; COPYRIGHT 2020 - NO ZEBRA NETWOORK S.A<br>
           TODOS OS DIREITOS RESERVADOS.</p>
