feito ajuste na parte share_image e save do barra2 para centralizar e feito ajuste no veja para o tamanho estar de acordo na reponsividade de 300px

--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -32,12 +32,12 @@
                      </button>
                 </div>
       
-                <div class="save_image">  
-                    <i class="fa fa-bookmark-o" style="font-size:20px;"></i>
+                <div class="sb save_image">  
+                    <i class="fa fa-bookmark-o"></i>
                 </div>
 
-                <div class="img_share"> 
-                    <i class="fa fa-share-alt" style="font-size:20px;"></i>
+                <div class="sb img_share"> 
+                    <i class="fa fa-share-alt" ></i>
                 </div>
   
             </div>
