--- a/Projeto/Index.html
+++ b/Projeto/Index.html
@@ -286,7 +286,7 @@
                             <li>há 27 dias</li>
                         </ul>
                         <div class="save">
-                            <i class="fa fa-bookmark-o" style="size:14px;"></i>
+                            <i class="fa fa-bookmark-o" style="font-size:14px;"></i>
                         </div>
                         <div class= "redirect">
                             <a  href="https://m.tecmundo.com.br/mercado/151283-senado-aprova-estado-calamidade-publica-videoconferencia.htm">
